# vexis-agent

./: .env.example  .gitignore  CAPABILITIES.md  CLAUDE.md  CONTRIBUTING.md  NOTICES.md  README.md  SECURITY.md  SOUL.md.example  config.example.yaml  install.sh  main.py  pyproject.toml
.claude/skills/vexis-agent-release/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.plans/maintainer-skills/skill-sync/: SKILL.md
brains/: base.py  claude_code.py
core/: background_tasks.py  coherence_judge.py  commands.py  config.py  control_socket.py  curator.py  dashboard_token.py  goal_judge.py  goal_manager.py  goal_state.py  handler.py  learning_curator.py  learning_review.py  learning_writes.py  logging.py  memory.py  model_discovery.py  model_validator.py  paths.py  running_tasks.py  session.py  sessions.py  status.py  subprocess.py  tailscale.py  transcripts.py  web_server.py  yaml_config.py  yaml_config_writer.py
core/brain/: __init__.py  base.py  claude_code.py  null.py  opencode.py
core/relationships/: __init__.py  candidate_store.py  consent.py  curator.py  extractor.py  store.py  triggers.py
core/voice/: __init__.py  voxtype_provider.py
docs/: brains.md  build-and-test-loop.md  computer-use-model.md  dogfood-checklist.md  goals.md  kanban.md  learning-curator-runbook.md  migration.md  model-ux.md  relationships.md  safety.md  screenshot-routing.md  telegram-streaming.md
scripts/: bench_curator_tick.py  clean_curator_jsonls.py  dev-setup.sh  dev_setup.py  e2e_kanban_dashboard.py  eval_coherence_fixtures.json  eval_learning.py  eval_relationships.py  install.py  install.sh  migrate_shadow_to_v2.py  pre-commit-dashboard-build  vexis-bg  vexis-browse  vexis-click  vexis-dashboard  vexis-desktop  vexis-dispatch  vexis-focus-wait  vexis-key  vexis-look  vexis-mem  vexis-skill  vexis-stream  vexis-type
tests/: _brain_seed.py  conftest.py  test_audit.py  test_aux_spawn_routing.py  test_background_tasks.py  test_background_tasks_sandbox.py  test_backup.py  test_brain_cancel.py  test_brain_claude_code_smoke.py  test_brain_contract.py  test_brain_error_classification.py  test_brain_frozen_snapshot.py  test_brain_isolation.py  test_brain_model_not_found.py  test_brain_opencode_scaffold.py  test_brain_opencode_session.py  test_brain_opencode_smoke.py  test_brain_opencode_transcripts.py  test_brain_parity.py  test_brain_reasoning.py  test_bundled_skills.py  test_capture_source.py  test_chat_history_handler.py  test_chat_stream.py  test_claude_md_invariants.py  test_cli_smoke.py  test_coherence_judge.py  test_commands.py  test_computer_use.py  test_config_dotenv_resolution.py  test_control_socket.py  test_curator.py  test_dashboard_bundle_freshness.py  test_dashboard_goals_endpoints.py  test_dashboard_kanban_endpoints.py  test_dashboard_schedules_endpoints.py  test_dashboard_skill_crud.py  test_dashboard_skills_endpoint.py  test_dashboard_tailscale_endpoint.py  test_data_examples_consistency.py  (+82 more)
tests/fixtures/: Dockerfile.test-xvfb
tests/relationships/: SMOKE.md  test_ambiguous_path.py  test_approval_hint.py  test_approve_flow.py  test_candidate_store.py  test_consent.py  test_dashboard_endpoints.py  test_delete_path.py  test_digest_command.py  test_disambiguation_back_edit.py  test_explicit_lane_disabled.py  test_extractor.py  test_extractor_eval.py  test_relationships_curator.py  test_restore_path.py  test_store.py  test_supersede_path.py  test_telegram_handoff.py  test_threat_bypass.py  test_triggers.py
tools/: browser_cli.py  desktop.py  desktop_cli.py  desktop_control.py  desktop_control_cli.py  livestream.py  livestream_cli.py  memory_cli.py  skills_cli.py  voxtype.py
tools/browser/: __init__.py  errors.py  profile.py  session.py  snapshot.py  tools.py
transports/: telegram.py  web.py
vexis_agent/: __init__.py  __main__.py  cli.py  cli_schedule.py  main.py  setup_wizard.py
vexis_agent/core/: auth.py  background_tasks.py  coherence_judge.py  commands.py  computer_use.py  config.py  curator.py  dashboard_token.py  goal_judge.py  goal_manager.py  goal_state.py  handler.py  identity_threat.py  learning_curator.py  learning_review.py  learning_writes.py  logging.py  memory.py  model_discovery.py  model_validator.py  notify.py  paths.py  running_tasks.py  safety.py  safety_hook.py  safety_install.py  sandbox_runner.py  schedule_manager.py  schedule_state.py  sessions.py  skill_install.py  skills.py  status.py  transcripts.py  user_candidates.py  web_kanban.py  web_server.py  yaml_config.py
vexis_agent/core/brain/: __init__.py  base.py  claude_code.py  null.py  opencode.py
vexis_agent/core/kanban/: __init__.py  constants.py  db.py  dispatcher.py  lanes.py
vexis_agent/core/relationships/: __init__.py  candidate_store.py  curator.py  extractor.py  pending.py  quoted.py  store.py  triggers.py
vexis_agent/core/voice/: __init__.py  base.py  discovery.py  null.py  piper.py  voxtype_provider.py
vexis_agent/daemon/: __init__.py  backup.py  doctor.py  mcp.py  systemd.py  uninstall.py  update.py
vexis_agent/data/: CAPABILITIES.md  __init__.py  mcp-servers.example.yaml  opencode_safety_plugin.mjs  workspace_CLAUDE.md.template
vexis_agent/tools/: background_cli.py  capture_source.py  desktop.py  desktop_cli.py  desktop_control.py  desktop_control_cli.py  livestream.py  livestream_cli.py  memory_cli.py  session_lock.py  skills_cli.py  voxtype.py
vexis_agent/tools/browser/: __init__.py  profile.py  session.py  tools.py
vexis_agent/tools/display/: __init__.py  cli.py  display.py
vexis_agent/tools/kanban/: __init__.py  api.py  cli.py
vexis_agent/tools/sandbox/: __init__.py  backend.py  cli.py  sandbox.py
vexis_agent/tools/schedule_tool/: __init__.py  parser.py
vexis_agent/tools/ui/: __init__.py  cli.py  runner_src.py  ui.py
vexis_agent/tools/verify/: __init__.py  cli.py  (+1 more)
vexis_agent/transports/: telegram.py  telegram_kanban.py  web.py
vexis_agent/web_dist/: index.html
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  setupTests.ts
(+79 files in other folders)
