[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vexis-agent"
version = "0.6.0"
description = "Telegram bot + agent CLI bridge for controlling an Omarchy desktop from a phone."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Zeus-Deus" }]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0",
    "aiohttp>=3.10",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "browser-use==0.12.6",
    "Pillow>=10.0",
    "questionary>=2.0",
    "croniter>=2.0",
]

[project.optional-dependencies]
# Voice (voxtype STT, piper TTS) — current implementations shell out to
# external binaries, so the Python side has no pip-installable runtime
# deps. Keeping this extra reserved for future Python-native voice
# providers (e.g. a faster-whisper option) so users can opt in without
# pulling wheel-only ML deps into the base install.
voice = []
# Dashboard frontend (web/) is a separate npm-built bundle. The Python
# server that hosts it (FastAPI + uvicorn) is core, so listing the
# extra here is purely informational — install nothing extra to use it.
dashboard = []
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
vexis-agent = "vexis_agent.cli:app"
# Dispatch wrappers — historically bash files in scripts/, now console
# scripts so pipx-installed users get them on PATH automatically. The
# bash files in scripts/ remain for dev-checkout convenience but are no
# longer the canonical entry points.
vexis-bg = "vexis_agent.tools.background_cli:main"
vexis-browse = "vexis_agent.tools.browser_cli:main"
vexis-desktop = "vexis_agent.tools.desktop_cli:main"
# Build-and-test loop primitives — see `.plans/agent-research.md`.
vexis-sandbox = "vexis_agent.tools.sandbox.cli:main"
vexis-verify = "vexis_agent.tools.verify.cli:main"
vexis-display = "vexis_agent.tools.display.cli:main"
vexis-ui = "vexis_agent.tools.ui.cli:main"
vexis-mem = "vexis_agent.tools.memory_cli:main"
vexis-skill = "vexis_agent.tools.skills_cli:main"
# Kanban work-queue CLI. Workers (spawned by the kanban dispatcher)
# call this via shell to declare outcomes; humans use it for
# inspection when they don't want to open the dashboard.
vexis-kanban = "vexis_agent.tools.kanban.cli:main"
vexis-stream = "vexis_agent.tools.livestream_cli:main"
vexis-click = "vexis_agent.tools.desktop_control_cli:main_click"
vexis-dispatch = "vexis_agent.tools.desktop_control_cli:main_dispatch"
vexis-focus-wait = "vexis_agent.tools.desktop_control_cli:main_focus_wait"
vexis-key = "vexis_agent.tools.desktop_control_cli:main_key"
vexis-type = "vexis_agent.tools.desktop_control_cli:main_type"

[tool.setuptools.packages.find]
where = ["."]
include = ["vexis_agent*"]
exclude = ["tests*", "scripts*", ".plans*", "docs*", "web*"]

[tool.setuptools.package-data]
# Patterns shipped under vexis_agent/* in the wheel. Two notable
# bundles:
#   * web_dist/  — built dashboard frontend (npm run build output);
#     gitignored as web/dist, copied to vexis_agent/web_dist/ at
#     release time. main._resolve_web_dist falls back to
#     <repo>/web/dist for editable / source-checkout installs.
#     Includes the wasm + onnx assets (silero VAD, onnxruntime)
#     which are large but the dashboard's voice-call mode genuinely
#     needs them.
#   * _bundled_skills/  — SKILL.md files vexis ships with so a
#     fresh install has the kanban orchestrator + worker playbooks,
#     etc. Discovered at runtime via core.skills.bundled_skills_root()
#     and merged into the brain's <available_skills> index alongside
#     user/curator-authored skills under <workspace>/skills/. The
#     resolver also accepts $VEXIS_BUNDLED_SKILLS for distro packagers
#     that relocate the data dir.
vexis_agent = [
    "**/*.yaml",
    "**/*.json",
    "data/*",
    "web_dist/index.html",
    "web_dist/assets/*",
    "web_dist/ort/*",
    "web_dist/vad/*",
    "_bundled_skills/**/*.md",
    "_bundled_skills/**/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Repo root on sys.path so `from scripts.* import ...` resolves under
# CI's pip-install-of-the-package layout (scripts/ is excluded from
# the wheel — see [tool.setuptools.packages.find].exclude — but the
# eval + dev-setup tests import from it directly).
pythonpath = ["."]
addopts = "-q -m 'not eval and not brain_smoke and not brain_smoke_opencode and not sandbox_docker and not display_real and not ui_real'"
markers = [
    "eval: integration eval that calls real claude -p (cost/network); opt-in via -m eval",
    "brain_smoke: real-binary claude-code smoke (cost/network); opt-in via -m brain_smoke",
    "brain_smoke_opencode: real-binary opencode smoke (cost/network); opt-in via -m brain_smoke_opencode",
    "sandbox_docker: integration test against real Docker daemon; opt-in via -m sandbox_docker",
    "display_real: integration test that spawns a real Xvfb / headless compositor; opt-in via -m display_real",
    "ui_real: integration test that hits a live AT-SPI bus; opt-in via -m ui_real",
]
